--- a/Otter/Practices/Practice.storyboard
+++ b/Otter/Practices/Practice.storyboard
@@ -838,9 +838,9 @@
         <image name="ripple.png" width="358" height="366"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="tIp-hC-FVg"/>
-        <segue reference="JMN-R4-FKW"/>
-        <segue reference="VZg-6U-cJa"/>
+        <segue reference="TgD-rW-gcG"/>
+        <segue reference="N5N-Ij-47E"/>
+        <segue reference="sRi-15-f6w"/>
         <segue reference="QXw-nG-jeB"/>
     </inferredMetricsTieBreakers>
 </document>
